# biolink-model-pydantic

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
biolink_model_pydantic/: __init__.py  model.py
pydanticgen/: pydanticgen.py
scripts/: pydanticgen.py
tests/: test_categories.py  test_curie_regex.py  test_validators.py
