[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "biolink_model_pydantic"
author = "The Monarch Initiative"
author-email = "info@monarchinitiative.org"
home-page = "https://github.com/kshefchek/biolink-model-pydantic"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Operating System :: POSIX :: Linux",
]
requires = [
    "pydantic >=1.0.0,<2.0.0",
]
description-file = "README.md"
requires-python = ">=3.7"

[tool.flit.metadata.urls]
Documentation = "https://github.com/kshefchek/biolink-model-pydantic"

[tool.flit.metadata.requires-extra]
test = [
    "pytest >=6.0.0",
]
dev = [
    "autoflake >=1.3.1,<2.0.0",
    "flake8 >=3.8.3,<4.0.0",
    "black ==20.8b1",
    "isort >=5.0.6,<6.0.0",
    "linkml >=0.0.7, <1.0.0",
    "click <8.0",
    "typer >=0.3",
]

[tool.black]
line_length = 100
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
